# This file is part of sv-witnesses repository: https://github.com/sosy-lab/sv-witnesses
#
# SPDX-FileCopyrightText: 2021 Dirk Beyer <https://www.sosy-lab.org>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
    'setuptools >= 42.0.0',
    'wheel >= 0.32.0',
]
build-backend = 'setuptools.build_meta'