# This file is part of sv-witnesses repository: https://github.com/sosy-lab/sv-witnesses
#
# SPDX-FileCopyrightText: 2021 Dirk Beyer <https://www.sosy-lab.org>
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = sv-witness-lint
version = attr: witnesslint.__version__
author = Dirk Beyer
description = A linter for the sv-witness format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sosy-lab/sv-witnesses/tree/master/lint
project_urls =
    Bug Tracker = https://github.com/sosy-lab/sv-witnesses/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Environment :: Console
license = Apache-2.0
license_file = LICENSES/Apache-2.0.txt

[options]
packages = witnesslint
python_requires = >=3.5
install_requires =
    lxml >= 4.6.3